# loyalty-agent

./: .env.example  .gitignore  README.md  alembic.ini  main.py  pyproject.toml  requirements.txt  techapoli_loyalty_agent_pmv.md
.github/workflows/: main_lumi-loyalty.yml
alembic/: env.py
alembic/versions/: 001_initial.py
app/agent/: guardrails.py  runtime.py
app/agent/prompts/: system.py
app/agent/tools/: __init__.py  _context.py  add_points.py  create_customer_with_card.py  explain_loyalty_policy.py  find_customer.py  get_company_analytics.py  get_customer_history.py  get_customer_loyalty_status.py  get_customer_rewards.py  redeem_reward.py  revoke_card.py
app/application/dto/: inbound.py
app/application/policies/: guardrails.py
app/application/use_cases/: process_inbound_message.py
app/core/: branding.py  config.py  database.py  logging.py  security.py
app/domain/entities/: loyalty.py
app/domain/ports/: audit.py  loyalty_service.py  outbound_channel.py
app/entrypoints/http/: health.py
app/entrypoints/webhooks/: _dispatch.py  telegram.py  whatsapp.py
app/infrastructure/audit/: postgres_audit.py
app/infrastructure/loyalty_api/: auth_manager.py  http_client.py
app/infrastructure/messaging/: telegram_adapter.py  whatsapp_adapter.py
app/infrastructure/persistence/models/: __init__.py  agent_audit_log.py  agent_message.py  agent_run.py  (+6 more)
app/shared/: exceptions.py  ids.py
scripts/: dev_chat.py  dev_chat_db.py
tests/: conftest.py
tests/unit/: test_auth_manager.py  test_guardrails.py  test_http_client.py  test_ids.py  test_security.py
