[project]
name = "loyalty-agent"
version = "0.1.0"
description = "Techapoli Loyalty Agent — conversational layer over the loyalty microservice"
requires-python = ">=3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py311"
